# rc-flight-controller

./: .gitignore  CMakeLists.txt  rc_dash_pro.py
src/: config.py  controller_monitor.py  flight  flight_reader.py  input_tuning.h  input_tuning_panel.py  integration.patch  logic_process.py  main.cpp  main.cpp.bad-backup  main.cpp.bak-20260208-105144  main.cpp.orig  main.cpp.rej  main.py  tuning_controller.cpp
src/config/: inputmapper.json  inputtuning.json  settings.json
src/cpp/: CRSFParser.h  CRSFSender.h  InputMapper.h  InputMixer.h  controller_manager.cpp  controller_manager.h  crsf_hardware_test  crsf_hardware_test.cpp  crsf_parser.h  crsf_sender.cpp  crsf_sender.h  crsf_tester  crsf_tester.cpp  flight  flight_controller  input_tuning.cpp  input_tuning.h  main.cpp  nomad_test  nomad_test.cpp  runflight  test_cine  test_cine.cpp
src/python/: battery_panel.py  camera_panel.py  config.py  flight_reader.py  hardware_bridge_test.py  input_tuning_panel.py  logic_process.py  logs_panel.py  loopback_test.py  main.py  mapper_panel.py  motors_panel.py  pid_panel.py  profiles_panel.py  render_core.py  sensors_panel.py  system_panel.py  touch_test.py  ui_components.py  ui_helpers.py  wifi_panel.py
